Updating pipeline: PA_PROJECTS_ALL staging 사용 해제

--- a/pipeline/PA_PROJECTS_ALL.json
+++ b/pipeline/PA_PROJECTS_ALL.json
@@ -77,7 +77,7 @@
 					"sink": {
 						"type": "AzureBlobFSSink"
 					},
-					"enableStaging": true
+					"enableStaging": false
 				},
 				"inputs": [
 					{
