--- a/pipeline/PA_PROJECTS_ALL.json
+++ b/pipeline/PA_PROJECTS_ALL.json
@@ -70,9 +70,11 @@
 				"userProperties": [],
 				"typeProperties": {
 					"source": {
-						"type": "SqlServerSource",
-						"queryTimeout": "02:00:00",
-						"partitionOption": "None"
+						"type": "OracleSource",
+						"partitionOption": "None",
+						"numberPrecision": 38,
+						"numberScale": 18,
+						"queryTimeout": "02:00:00"
 					},
 					"sink": {
 						"type": "AzureBlobFSSink"
@@ -81,7 +83,7 @@
 				},
 				"inputs": [
 					{
-						"referenceName": "SqlServerTable1",
+						"referenceName": "OracleTable1",
 						"type": "DatasetReference"
 					}
 				],
