Updating pipeline: PA_PROJECTS_ALL

--- a/pipeline/PA_PROJECTS_ALL.json
+++ b/pipeline/PA_PROJECTS_ALL.json
@@ -181,6 +181,10 @@
 						"yyyyMMddHHmmss": {
 							"value": "@{activity('GET_CFG').output.firstRow.yyyyMMddHHmmss}",
 							"type": "Expression"
+						},
+						"time": {
+							"value": "@variables('TIME')",
+							"type": "Expression"
 						}
 					}
 				},
